--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -53,8 +53,12 @@ body{
 
     @include respond (tab-port){
         font-size: 2.5rem;
+        margin-right: 2rem;
+        margin-left: 2rem;
     }
     @include respond (phone){
+        margin-right: 2rem;
+        margin-left: 2rem;
         font-size: 2rem; 
     }
 
